--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,10 +2,22 @@
 @tailwind components;
 @tailwind utilities;
 
-.flex-center{
- @apply flex items-center
+.flex-center {
+    @apply flex items-center
 }
 
+/* class for typography */
 .h1 {
-    @apply text-[3.25rem] font-extrabold
+    @apply text-[3.25rem] font-[600]
 }
+
+.p {
+    @apply text-[22px] text-secondary
+}
+
+/* class for gradient background*/
+.gradient-bg::before {
+    background: radial-gradient(circle, rgba(255,255,255,1) 0%, rgba(50,175,255,0.013064600840336116) 0%, rgba(114,200,255,0.5) 0%, rgba(126,205,255,0.3) 0%, rgba(124,204,255,0.3) 0%, rgba(255,255,255,0) 60%);    
+    @apply w-full lg:left-[-400px] left-0 top-0 absolute h-[80%] content-[''] -z-10
+} 
+
