--- a/styles/globals.css
+++ b/styles/globals.css
@@ -101,4 +101,51 @@
 	  transform: translate(24px, 0);
 	}
   }
+
+  .marquee {
+	@apply h-[50px] overflow-hidden relative bg-[#fefefe] text-[#333] border-[1px] border-primary rounded-sm p font-bold
+}
+
+.marquee p {
+	@apply absolute h-full m-0 leading-[50px] text-center max-md:text-[1.4rem] w-full max-md:w-[72ch];
+	-moz-transform: translateX(100%);
+	-webkit-transform: translateX(100%);
+	transform: translateX(100%);
+	-moz-animation: scroll-left 2s linear infinite;
+	-webkit-animation: scroll-left 2s linear infinite;
+	animation: scroll-left 10s linear infinite;
+}
+
+@-moz-keyframes scroll-left {
+	0% {
+		-moz-transform: translateX(100%);
+	}
+	100% {
+		-moz-transform: translateX(-100%);
+	}
+}
+
+@-webkit-keyframes scroll-left {
+	0% {
+		-webkit-transform: translateX(100%);
+	}
+	100% {
+		-webkit-transform: translateX(-100%);
+	}
+}
+
+@keyframes scroll-left {
+	0% {
+		-moz-transform: translateX(100%);
+		-webkit-transform: translateX(100%);
+		transform: translateX(100%);
+	}
+	100% {
+		-moz-transform: translateX(-100%);
+		-webkit-transform: translateX(-100%);
+		transform: translateX(-100%);
+	}
+}
+
+
   
