update hero with video background, change navbar background, optimize running text

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,58 +1,58 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
- canvas {
-	@apply w-full h-full object-contain border-2 my-1 !important 
+body {
+	@apply bg-white
+}
+canvas {
+	@apply w-full h-full object-contain border-2 my-1 !important
 }
 
 /* create most uses classes */
 .flex-center {
-    @apply flex items-center
+	@apply flex items-center
 }
+
+.main-padding {
+	@apply md:px-[8.6875rem] px-4 mt-10
+}
+
 .smooth {
-    @apply transition-all duration-300 ease-in-out
+	@apply transition-all duration-300 ease-in-out
 }
 
 /* class for typography */
 .h1 {
-    @apply md:text-[3.25rem] font-[600] text-4xl sm:leading-[4rem] leading-[2.7rem]
+	@apply md:text-[3.25rem] font-[600] text-4xl sm:leading-[4rem] leading-[2.7rem]
 }
 
 .h2 {
-    @apply md:text-[3rem] font-[600] text-3xl  sm:leading-[4rem]
+	@apply md:text-[3rem] font-[600] text-3xl sm:leading-[4rem]
 }
 
 .p {
-    @apply md:text-[22px] text-secondary text-[15px]
+	@apply md:text-[22px] text-secondary text-[15px]
 }
 
 /* class for gradient background*/
-
 .gradient-bg::before {
-    background: radial-gradient(circle, rgba(255,255,255,1) 0%, rgba(50,175,255,0.013064600840336116) 0%, rgba(114,200,255,0.5) 0%, rgba(126,205,255,0.3) 0%, rgba(124,204,255,0.3) 0%, rgba(255,255,255,0) 55%);    
-    @apply w-full lg:left-[-450px] left-0 top-0 absolute h-full content-[''] -z-10
-} 
+	background: radial-gradient(circle, rgba(255, 255, 255, 1) 0%, rgba(50, 175, 255, 0.013064600840336116) 0%, rgba(114, 200, 255, 0.5) 0%, rgba(126, 205, 255, 0.3) 0%, rgba(124, 204, 255, 0.3) 0%, rgba(255, 255, 255, 0) 55%);
+	@apply w-full lg:left-[-450px] left-0 top-0 absolute h-full content-[''] -z-10
+}
+
 .gradient-bg::after {
-    background: radial-gradient(circle, rgba(255,255,255,1) 0%, rgba(50,175,255,0.013064600840336116) 0%, rgba(114,200,255,0.5) 0%, rgba(126,205,255,0.3) 0%, rgba(124,204,255,0.3) 0%, rgba(255,255,255,0) 55%);    
-    @apply w-full  right-0 bottom-[-77rem] absolute h-full content-[''] -z-10 
-} 
-
-
-
-
-
-
-
-
+	background: radial-gradient(circle, rgba(255, 255, 255, 1) 0%, rgba(50, 175, 255, 0.013064600840336116) 0%, rgba(114, 200, 255, 0.5) 0%, rgba(126, 205, 255, 0.3) 0%, rgba(124, 204, 255, 0.3) 0%, rgba(255, 255, 255, 0) 55%);
+	@apply w-full right-0 bottom-[-77rem] absolute h-full content-[''] -z-10
+}
 
 .lds-ellipsis {
 	display: inline-block;
 	position: relative;
 	width: 80px;
 	height: 80px;
-  }
-  .lds-ellipsis div {
+}
+
+.lds-ellipsis div {
 	position: absolute;
 	top: 33px;
 	width: 13px;
@@ -60,105 +60,95 @@
 	border-radius: 50%;
 	background: #333;
 	animation-timing-function: cubic-bezier(0, 1, 1, 0);
-  }
-  .lds-ellipsis div:nth-child(1) {
-	left: 8px;
-	animation: lds-ellipsis1 0.6s infinite;
-  }
-  .lds-ellipsis div:nth-child(2) {
-	left: 8px;
-	animation: lds-ellipsis2 0.6s infinite;
-  }
-  .lds-ellipsis div:nth-child(3) {
-	left: 32px;
-	animation: lds-ellipsis2 0.6s infinite;
-  }
-  .lds-ellipsis div:nth-child(4) {
-	left: 56px;
-	animation: lds-ellipsis3 0.6s infinite;
-  }
-  @keyframes lds-ellipsis1 {
-	0% {
-	  transform: scale(0);
-	}
-	100% {
-	  transform: scale(1);
-	}
-  }
-  @keyframes lds-ellipsis3 {
-	0% {
-	  transform: scale(1);
-	}
-	100% {
-	  transform: scale(0);
-	}
-  }
-  @keyframes lds-ellipsis2 {
-	0% {
-	  transform: translate(0, 0);
-	}
-	100% {
-	  transform: translate(24px, 0);
-	}
-  }
-
-  .marquee {
-	@apply h-[50px] overflow-hidden relative bg-[#fefefe] text-[#333] border-[1px] border-primary rounded-sm p font-bold
 }
 
-.marquee p {
-	@apply absolute h-full m-0 leading-[50px] text-center max-md:text-[1.4rem] w-full max-md:w-[74ch];
-	-moz-transform: translateX(100%);
-	-webkit-transform: translateX(100%);
-	transform: translateX(100%);
-	-moz-animation: scroll-left 2s linear infinite;
-	-webkit-animation: scroll-left 2s linear infinite;
+/* loading animation */
+.lds-ellipsis div:nth-child(1) {
+	left: 8px;
+	animation: lds-ellipsis1 0.6s infinite;
+}
+
+.lds-ellipsis div:nth-child(2) {
+	left: 8px;
+	animation: lds-ellipsis2 0.6s infinite;
+}
+
+.lds-ellipsis div:nth-child(3) {
+	left: 32px;
+	animation: lds-ellipsis2 0.6s infinite;
+}
+
+.lds-ellipsis div:nth-child(4) {
+	left: 56px;
+	animation: lds-ellipsis3 0.6s infinite;
+}
+
+@keyframes lds-ellipsis1 {
+	0% {
+		transform: scale(0);
+	}
+
+	100% {
+		transform: scale(1);
+	}
+}
+
+@keyframes lds-ellipsis3 {
+	0% {
+		transform: scale(1);
+	}
+
+	100% {
+		transform: scale(0);
+	}
+}
+
+@keyframes lds-ellipsis2 {
+	0% {
+		transform: translate(0, 0);
+	}
+
+	100% {
+		transform: translate(24px, 0);
+	}
+}
+
+/* running text */
+.marquee {
+	@apply h-[50px] overflow-hidden relative bg-[#fefefe] text-[#333] border-t-[1px] border-b-[1px] border-primary rounded-sm p font-bold
+}
+
+.marquee .holder {
+	@apply h-full text-left max-md:text-[1.4rem] w-fit absolute;
 	animation: scroll-left 15s linear infinite;
 }
 
-@-moz-keyframes scroll-left {
-	0% {
-		-moz-transform: translateX(100%);
-	}
-	100% {
-		-moz-transform: translateX(-100%);
-	}
+.list {
+	@apply whitespace-nowrap pr-4 mr-2 border-r-2 float-left;
 }
 
-@-webkit-keyframes scroll-left {
-	0% {
-		-webkit-transform: translateX(100%);
-	}
-	100% {
-		-webkit-transform: translateX(-100%);
-	}
-}
 
 @keyframes scroll-left {
-	0% {
-		-moz-transform: translateX(100%);
-		-webkit-transform: translateX(100%);
-		transform: translateX(100%);
-	}
-	100% {
-		-moz-transform: translateX(-100%);
-		-webkit-transform: translateX(-100%);
-		transform: translateX(-100%);
-	}
+	from { 
+		transform: translateX(0%);
+	 }
+    to { 
+		transform: translateX(-50%);
+	 }
 }
-
-
+/* slder */
 .arrow {
-    @apply relative top-[40%] z-10 rounded-[150px] grid place-items-center p-2 shadow-lg border-[1px] bg-white border-primary hover:border-inherit 
-}
-.arrow-disabled {
-    @apply scale-0
-}
-.arrow-left {
-    @apply absolute left-[-20px] md:left-[-35px]
-}
-.arrow-right {
-    @apply absolute right-[-20px] md:right-[-35px]
+	@apply relative top-[40%] z-10 rounded-[150px] grid place-items-center p-2 shadow-lg border-[1px] bg-white border-primary hover:border-inherit
 }
 
-  
+.arrow-disabled {
+	@apply scale-0
+}
+
+.arrow-left {
+	@apply absolute left-[-20px] md:left-[-35px]
+}
+
+.arrow-right {
+	@apply absolute right-[-15px] md:right-[-35px]
+}
