update beranda, add skeleton load, update slug page

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -152,3 +152,20 @@ canvas {
 .arrow-right {
 	@apply absolute right-[-15px] md:right-[-35px]
 }
+
+/* skeleton loader background */
+
+.skeleton-bg {
+	@apply bg-slate-50 relative overflow-hidden
+}
+.skeleton-bg::after {
+	@apply absolute top-0 right-0 translate-x-[-100%] w-full h-full z-10 bg-skeleton content-[''];
+	animation: shimmer 2s infinite;
+  }
+
+  @keyframes shimmer {
+	100% {
+	  transform: translateX(100%);
+	}
+  }
+  
