--- a/styles/globals.css
+++ b/styles/globals.css
@@ -46,19 +46,11 @@ canvas {
 }
 
 .lds-ellipsis {
-	display: inline-block;
-	position: relative;
-	width: 80px;
-	height: 80px;
+	@apply inline-block relative w-[80px] h-[80px];
 }
 
 .lds-ellipsis div {
-	position: absolute;
-	top: 33px;
-	width: 13px;
-	height: 13px;
-	border-radius: 50%;
-	background: #333;
+	@apply absolute top-[33px] w-[13px] h-[13px] rounded-[50%] bg-[#333];
 	animation-timing-function: cubic-bezier(0, 1, 1, 0);
 }
 
@@ -167,5 +159,14 @@ canvas {
 	100% {
 	  transform: translateX(100%);
 	}
+  }
+
+  .hover-special {
+	background: linear-gradient(#f7ba2b 0 0) var(--p,0)/var(--p,0) no-repeat;
+	transition: .4s,background-position -0s;
+  }
+  .hover-special:hover {
+	--p: 100%;
+	color: #fff;
   }
   
